creating page / document structure and adding fonts from google font

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,8 @@
   ],
   "rules": {
     "camelcase": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
     "import/no-duplicates": "off",
     "react/jsx-props-no-spreading": "off",
     "prettier/prettier": "error",
@@ -72,12 +74,6 @@
       {
         "ts": "never",
         "tsx": "never"
-      }
-    ],
-    "@typescript-eslint/explicit-function-return-type": [
-      "error",
-      {
-        "allowExpressions": true
       }
     ],
     "@typescript-eslint/camelcase": "off"
